
noinst_LIBRARIES = libmemcache.a

AM_CPPFLAGS = -I$(top_srcdir)/src
AM_CFLAGS = -Wall -Wextra

libmemcache_a_SOURCES = \
	action.c action.h \
	binary.c binary.h \
	command.c command.h \
	entry.c entry.h \
	memcache.c memcache.h \
	parser.c parser.h \
	result.h \
	state.c state.h \
	table.c table.h
